Add unit components

--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -1,12 +1,19 @@
-$color-white: #fff;
 $color-electric: #4563bc;
-$color-grey: #3d444d;
 $color-electric-hover: #4b69c4;
 
-$placeholder-color: #908d8d;
+$color-placeholder: #908d8d;
 
-$bg-color-default: #0d1117;
-$bg-color-muted: #151b23;
-$bg-color-inset: #010409;
+$color-white: #ffffff;
+$color-white-soft: #f8f8f8;
+$color-white-mute: #f2f2f2;
+
+$color-black: #0d1117;
+$color-black-mute: #282828;
+$color-black-soft: #222222;
+
+$color-dark-border: #3d444d;
+
+$box-padding: 12px 6px;
+$border-radius: 4px;
 
 
